--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,11 @@
 
 # misc
 .DS_Store
-.env.local
+#.env.local
 .env.development.local
 .env.test.local
 .env.production.local
-#.env
+.env
 package-lock.json
 npm-debug.log*
 yarn-debug.log*
