renamed:    222.local -> .env.local  	modified:   .gitignore

--- a/.env.local
+++ b/.env.local
@@ -3,7 +3,7 @@ as I deploy this admin server on heroku so, my api url like, https://dashtar.her
 
 
 
-REACT_APP_API_BASE_URL=http://localhost:5055/api
+REACT_APP_API_BASE_URL=https://backend-app-delta.vercel.app/api
 REACT_APP_CLOUDINARY_URL=https://api.cloudinary.com/v1_1/dp2ulmlr5/image/upload
 REACT_APP_CLOUDINARY_UPLOAD_PRESET=oegxtubs  
 //use here your unsigned upload preset
